change cursor in some component

--- a/src/index.html
+++ b/src/index.html
@@ -111,6 +111,8 @@
       border-radius: 5px;
     }
 
+    .change-cursor { cursor: pointer; }
+
   </style>
   <div id="nb-global-spinner" class="spinner">
     <div class="blob blob-0"></div>
