change footer, make pre color better

--- a/src/index.html
+++ b/src/index.html
@@ -104,8 +104,8 @@
     }
 
     .my-post pre {
-      background: #EBE6C4;
-      color: #323259;
+      background: #1d2951;
+      color: #e2d6ae;
       margin: 10px;
       padding: 10px;
       border-radius: 5px;
